feat(patch): 添加 Dex 模式选项
- 在 LSPatch 中增加 dexMode 参数，用于选择 Dex 处理模式
- 在 AppManageViewModel 和 NewPatchViewModel 中添加 Dex 模式的相关逻辑
- 更新 NewPatchScreen UI，增加 Dex 模式选择功能
- 在 Patcher 中处理 Dex 模式参数
- 更新相关资源文件，添加 Dex 模式的字符串定义

--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -86,4 +86,7 @@
     <string name="settings_keystore_wrong_alias">別名錯誤</string>
     <string name="settings_keystore_wrong_alias_password">別名密碼錯誤</string>
     <string name="settings_detail_patch_logs">詳細打包日誌</string>
+    <string name="patch_dex_mod">Dex 模式</string>
+    <string name="patch_dex_modlv0">模式0: 清除 DEX</string>
+    <string name="patch_dex_modlv1">模式1: 附加 DEX</string>
 </resources>
