--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -86,7 +86,6 @@
     <string name="settings_keystore_wrong_alias">别名错误</string>
     <string name="settings_keystore_wrong_alias_password">别名密码错误</string>
     <string name="settings_detail_patch_logs">详细修补日志</string>
-    <string name="patch_dex_mod">Dex 模式</string>
-    <string name="patch_dex_modlv0">模式0: 清除 DEX</string>
-    <string name="patch_dex_modlv1">模式1: 附加 DEX</string>
+    <string name="patch_dex_mod">注入加载器 Dex</string>
+    <string name="patch_dex_desc">对那些需要孤立服务进程的应用程序，譬如说浏览器的渲染引擎，请勾选此选项以确保他们正常运行</string>
 </resources>
