--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -90,7 +90,6 @@
     <string name="settings_keystore_wrong_alias">Wrong alias name</string>
     <string name="settings_keystore_wrong_alias_password">Wrong alias password</string>
     <string name="settings_detail_patch_logs">Detail patch logs</string>
-    <string name="patch_dex_mod">Dex Mod</string>
-    <string name="patch_dex_modlv0">mod0: Clear DEX</string>
-    <string name="patch_dex_modlv1">mod1: Append DEX</string>
+    <string name="patch_dex_mod">Inject loader dex</string>
+    <string name="patch_dex_desc">For applications with isolated services, such as the render engines of browsers, please turn on option to ensure that they work properly.</string>
 </resources>
